--- a/.github/workflows/publish-lab0.yml
+++ b/.github/workflows/publish-lab0.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: Lab0/_book
-          destination_dir: Lab0   # 👈 goes into gh-pages/Lab0
+          destination_dir: Lab0   # goes into gh-pages/Lab0
