--- a/.github/workflows/publish-lab0.yml
+++ b/.github/workflows/publish-lab0.yml
@@ -21,10 +21,9 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install R dependencies
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::rmarkdown, any::knitr, any::ggplot2
+      - name: Install R packages
+        run: |
+          install.packages(c("rmarkdown","knitr","ggplot2"))
 
       - name: Render Quarto project
         run: quarto render
