--- a/.github/workflows/publish-lab0.yml
+++ b/.github/workflows/publish-lab0.yml
@@ -24,9 +24,9 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      # Step 4: Install only the required R packages
+      # Step 4: Install required R packages
       - name: Install R packages
-        run: Rscript -e 'install.packages(c("rmarkdown","knitr","ggplot2"))'
+        run: Rscript -e 'install.packages(c("rmarkdown", "knitr", "ggplot2", "webexercises"))'
 
       # Step 5: Render the Quarto project
       - name: Render Quarto project
