--- a/.github/workflows/publish-lab0.yml
+++ b/.github/workflows/publish-lab0.yml
@@ -26,7 +26,7 @@ jobs:
 
       # Step 4: Install required R packages
       - name: Install R packages
-        run: Rscript -e 'install.packages(c("rmarkdown", "knitr", "ggplot2", "webexercises"))'
+        run: Rscript -e 'install.packages(c("rmarkdown", "knitr", "ggplot2", "webexercises", "PASWR2"))'
 
       # Step 5: Render the Quarto project
       - name: Render Quarto project
