--- a/.github/workflows/publish-lab0.yml
+++ b/.github/workflows/publish-lab0.yml
@@ -24,9 +24,12 @@ jobs:
       - name: Set up R
         uses: r-lib/actions/setup-r@v2
 
-      # Step 4: Install required R packages
-      - name: Install R packages
-        run: Rscript -e 'install.packages(c("rmarkdown", "knitr", "ggplot2", "webexercises", "PASWR2"))'
+      # Step 4: Install required R packages with caching
+      - name: Install R packages (with cache)
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: any::rmarkdown, any::knitr, any::ggplot2, any::webexercises, any::PASWR2, any::kableExtra, any::tidyverse
+          cache: true
 
       # Step 5: Render the Quarto project
       - name: Render Quarto project
