Ensure workflow is triggered only when changes to coreesponding subfolder occur.

--- a/.github/workflows/publish-lab0.yml
+++ b/.github/workflows/publish-lab0.yml
@@ -3,6 +3,8 @@ name: Quarto Publish Lab0
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'Lab0/**'         # Only trigger if files in Lab0 change
 
 jobs:
   build-deploy:
