--- a/.github/workflows/publish-root.yml
+++ b/.github/workflows/publish-root.yml
@@ -37,5 +37,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: .   # publish from repo root
+          publish_dir: docs   # publish from repo root
           keep_files: true # keeps Lab0/Lab1/Lab2 already deployed
