--- a/.github/workflows/publish-MLE.yml
+++ b/.github/workflows/publish-MLE.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'MLE/**'         # Only trigger if files in MLE change
+  workflow_dispatch:      # Manual trigger button in Actions tab
 
 jobs:
   build-deploy:
