--- a/.github/workflows/publish-lab1.yml
+++ b/.github/workflows/publish-lab1.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'Lab1/**'         # Only trigger if files in Lab1 change
+  workflow_dispatch:      # Manual trigger button in Actions tab
 
 jobs:
   build-deploy:
