--- a/.github/workflows/publish-lab10.yml
+++ b/.github/workflows/publish-lab10.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'Lab10/**'         # Only trigger if files in Lab10 change
+  workflow_dispatch:      # Manual trigger button in Actions tab
 
 jobs:
   build-deploy:
