--- a/.github/workflows/publish-lab3.yml
+++ b/.github/workflows/publish-lab3.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'Lab3/**'         # Only trigger if files in Lab3 change
+  workflow_dispatch:      # Manual trigger button in Actions tab
 
 jobs:
   build-deploy:
