--- a/.github/workflows/publish-lab4.yml
+++ b/.github/workflows/publish-lab4.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'Lab4/**'         # Only trigger if files in Lab4 change
+  workflow_dispatch:      # Manual trigger button in Actions tab
 
 jobs:
   build-deploy:
