--- a/.github/workflows/publish-lab4live.yml
+++ b/.github/workflows/publish-lab4live.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'Lab4Live/**'         # Only trigger if files in Lab4Live change
+  workflow_dispatch:      # Manual trigger button in Actions tab
 
 jobs:
   build-deploy:
