--- a/.github/workflows/publish-lab5.yml
+++ b/.github/workflows/publish-lab5.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'Lab5/**'         # Only trigger if files in Lab5 change
+  workflow_dispatch:      # Manual trigger button in Actions tab
 
 jobs:
   build-deploy:
