--- a/.github/workflows/publish-lab8.yml
+++ b/.github/workflows/publish-lab8.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'Lab8/**'         # Only trigger if files in Lab8 change
+  workflow_dispatch:      # Manual trigger button in Actions tab
 
 jobs:
   build-deploy:
