--- a/.github/workflows/publish-lab9.yml
+++ b/.github/workflows/publish-lab9.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - 'Lab9/**'         # Only trigger if files in Lab9 change
+  workflow_dispatch:      # Manual trigger button in Actions tab
 
 jobs:
   build-deploy:
