--- a/Lab0/_quarto.yml
+++ b/Lab0/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 book:
-  title: "S2S Induction Lab"
+  title: "Level 2 Statistics"
   chapters:
     - index.qmd
     - 01-remote-desktop.qmd
