Revert last 7 commits

--- a/.github/workflows/publish-lab1.yml
+++ b/.github/workflows/publish-lab1.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: Lab1   # Make sure your folder is named Lab1 (no spaces)
 
     steps:
       # Step 1: Checkout the repository
@@ -31,14 +34,14 @@ jobs:
           extra-packages: any::rmarkdown, any::knitr, any::ggplot2, any::webexercises, any::PASWR2, any::kableExtra, any::tidyverse
           cache: true
 
-      # Step 5: Render the Quarto project in Lab1
+      # Step 5: Render the Quarto project
       - name: Render Quarto project
-        run: quarto render Lab1 --output-dir Lab1/docs
+        run: quarto render
 
       # Step 6: Deploy to GitHub Pages
       - name: Deploy Lab1 site
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: Lab1/docs       # Quarto output folder
-          destination_dir: Lab1        # Subfolder on gh-pages branch
+          publish_dir: Lab1/docs      # Quarto output folder
+          destination_dir: Lab1         # Subfolder on gh-pages branch
