--- a/.github/workflows/publish-lab1.yml
+++ b/.github/workflows/publish-lab1.yml
@@ -10,9 +10,6 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: Lab1   # Make sure your folder is named Lab1 (no spaces)
 
     steps:
       # Step 1: Checkout the repository
@@ -36,7 +33,7 @@ jobs:
 
       # Step 5: Render the Quarto project
       - name: Render Quarto project
-        run: quarto render
+        run: quarto render Lab1
 
       # Step 6: Deploy to GitHub Pages
       - name: Deploy Lab1 site
