--- a/.github/workflows/publish-lab1.yml
+++ b/.github/workflows/publish-lab1.yml
@@ -33,7 +33,8 @@ jobs:
 
       # Step 5: Render the Quarto project
       - name: Render Quarto project
-        run: quarto render Lab1
+        working-directory: Lab1
+        run: quarto render
 
       # Step 6: Deploy to GitHub Pages
       - name: Deploy Lab1 site
