--- a/Lab5/_quarto.yml
+++ b/Lab5/_quarto.yml
@@ -7,8 +7,9 @@ book:
   chapters:
     - index.qmd
     - 01-samplingdist.qmd
-    - 02-exercises.qmd
-    - 03-summary.qmd
+    - 02-functions.qmd
+    - 03.exercises.qmd
+    - 04-summary.qmd
 
 format:
   html:
